<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pabu"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="409dp"
        android:layout_height="176dp"
        app:cardBackgroundColor="@color/tosca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/halo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginBottom="6dp"
                android:text="@string/halo"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/nama"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.925" />

            <TextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginBottom="12dp"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/kabar"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/kabar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginBottom="40dp"
                android:text="@string/kabar"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="115dp"
                android:layout_height="109dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/foto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/photo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="326dp"
        android:layout_height="152dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="151dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="63dp"
                android:layout_height="52dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="5dp"
                android:background="#A5E9E1"
                android:contentDescription="@string/jadwal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.469"
                app:srcCompat="@drawable/ic_jadwal_foreground" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/jadwal"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView5"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="63dp"
                android:layout_height="51dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="108dp"
                android:background="#A5E9E1"
                android:contentDescription="@string/permintaan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.463"
                app:srcCompat="@drawable/ic_permintaan_foreground" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="2dp"
                android:text="@string/permintaan"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView7"
                app:layout_constraintVertical_bias="0.041" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                android:text="@string/sidang"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="327dp"
        android:layout_height="151dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="63dp"
                android:layout_height="52dp"
                android:layout_marginStart="52dp"
                android:background="#A5E9E1"
                android:contentDescription="@string/jadwal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView4"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.474"
                app:srcCompat="@drawable/ic_jadwal_foreground" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="63dp"
                android:layout_height="51dp"
                android:layout_marginEnd="108dp"
                android:background="#A5E9E1"
                android:contentDescription="@string/permintaan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.48"
                app:srcCompat="@drawable/ic_permintaan_foreground" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/seminar"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:fontFamily="sans-serif"
                android:text="@string/jadwal"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                app:layout_constraintVertical_bias="0.121" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="4dp"
                android:text="@string/permintaan"
                android:textColor="#000000"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="411dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="421dp"
            android:layout_height="match_parent"
            android:background="@color/tosca">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="76dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_home_foreground" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ta"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/mahasiswa"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="64dp"
                android:layout_marginBottom="8dp"
                android:text="@string/profil"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="42dp"
                android:layout_marginBottom="8dp"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="61dp"
                android:layout_height="49dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/ta"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25"
                app:srcCompat="@drawable/ic_ta_foreground" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="60dp"
                android:layout_height="46dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/permintaan"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.571"
                app:srcCompat="@drawable/ic_mahasiswa_foreground" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="62dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/profil"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.298"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_profile" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>